--- a/test/Makefile
+++ b/test/Makefile
@@ -1,16 +1,17 @@
 CC=gcc
 CFLAGS= -Wall -Werror
-DEBUG_FLAGS = -g
+DEBUG_FLAGS= -g
+RELEASE_FLAGS= -O3
 LIBS= -lCSON
 
 default:
-	@$(CC) $(CFLAGS) $(DEBUG_FLAGS) -o test test_parse.c $(LIBS)
+	@$(CC) $(CFLAGS) $(RELEASE_FLAGS) -o test test_parse.c $(LIBS)
 	@sudo chmod 0755 test
 	@./test
 	@rm test
 
 test-mem:
-	@$(CC) $(CFLAGS) $(DEBUG_FLAGS) -o test test_parse.c $(LIBS)
+	@$(CC) $(CFLAGS) $(RELEASE_FLAGS) -o test test_parse.c $(LIBS)
 	@sudo chmod 0755 test
 	@valgrind -v --track-origins=yes --leak-check=full --show-leak-kinds=all ./test
 	@rm test
